--- a/Authapp/src/app/pages/login/login.component.html
+++ b/Authapp/src/app/pages/login/login.component.html
@@ -23,6 +23,9 @@
             </div>
         </form>
         <div class="register_visit">
+            <a routerLink="/forget-password">Forget Password</a>
+        </div>
+        <div class="register_visit">
             <p>Click here to </p>
             <a routerLink="/register">Register</a>
         </div>
